5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1674_1101.log
== TEST (2019-04-24 14:42:58) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
x = "Entrada: "
y = "Valor total: R$ "

print(x,ce," kWh")

if(ce<o):
	print("Dados invalidos")
elif(t==R):
	if(ce<=500):
		print(y,ce*0.44)
	else:
		print(y,ce*0.65)
elif(t==C):
	if(ce<=1000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
elif(t==I):
	if(ce<=5000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
else:
	print("Dados invalidos")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(ce<o):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:46:52) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
x = "Entrada: "
y = "Valor total: R$ "

print(x,ce," kWh")

if(ce<0):
	print("Dados invalidos")
elif(t==R):
	if(ce<=500):
		print(y,ce*0.44)
	else:
		print(y,ce*0.65)
elif(t==C):
	if(ce<=1000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
elif(t==I):
	if(ce<=5000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:48:43) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
x = "Entrada: "
y = "Valor total: R$ "

print(x,ce," kWh")

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,ce*0.44)
	else:
		print(y,ce*0.65)
elif(t=="C"):
	if(ce<=1000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
elif(t=="I"):
	if(ce<=5000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0  kWh
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:52:04) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,ce*0.44)
	else:
		print(y,ce*0.65)
elif(t=="C"):
	if(ce<=1000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
elif(t=="I"):
	if(ce<=5000):
		print(y,ce*0.55)
	else:
		print(y,ce*0.60)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:56:29) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:57:29) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:58:03) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:58:43) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:00:23) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.188254
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 18:15:31) 
-- CODE:
ce = float(input("digite o consumo de energia:"))
t = input("tipo de instalacao[R,I ou C]:").upper()
y = "Valor total: R$ "

print("Entradas: ",ce," kWh e tipo ",t)

if(ce<0):
	print("Dados invalidos")
elif(t=="R"):
	if(ce<=500):
		print(y,round(ce*0.44,2))
	else:
		print(y,round(ce*0.65,2))
elif(t=="C"):
	if(ce<=1000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
elif(t=="I"):
	if(ce<=5000):
		print(y,round(ce*0.55,2))
	else:
		print(y,round(ce*0.60,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.220188
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
